# RaspberryPi-Music-Player

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  bugs.md  todo.md
include/: audio_dac_bridge.h  audio_dac_i2c_bridge.h  audio_dac_i2s_bridge.h  audio_dac_i2s_values.h  audio_dac_pin_values.h  audio_dac_pins.h  audio_dac_registers.h  audio_dac_values.h  audio_player.h  audio_song_queue.h  button_pins.h  dac_i2s_bridge.h  input.h  led_manager.h  sd_memory_manager.h  wav_file.h
src/: audio_dac_bridge.c  audio_player.c  dac_i2s_bridge.c  hw_config.c  input.c  led_manager.c  main.c  main_sd.c  sd_memory_manager.c  test.c
src/audio/: audio_dac_i2c_bridge.c  audio_dac_i2s_bridge.c  audio_player.c  audio_song_queue.c  dac_i2s.pio
src/sd_memory/: hw_config.c  sd_memory_manager.c
